--- a/Task-List/css/style.css
+++ b/Task-List/css/style.css
@@ -59,10 +59,6 @@ body {
   background: rgba(246, 241, 209, 0.1);
 }
 
-body {
-  margin: 0;
-}
-
 .app {
   display: flex;
   align-items: center;
@@ -116,9 +112,12 @@ body {
 }
 
 .lista {
+  height: 10rem;
   padding: 0;
   list-style: none;
   width: 100%;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .tarefa {
