--- a/Task-List/css/style.css
+++ b/Task-List/css/style.css
@@ -130,37 +130,6 @@ body {
   padding: 1rem 3rem;
 }
 
-.check-botao, .delete-botao {
-  background-color: #F6F1D1;
-  border: none;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-  outline: none;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-.tarefa.feita .check-botao {
-  background-color: #46494C;
-  color: #F6F1D1;
-}
-
-.check-icon {
-  display: block;
-  padding: 1px;
-  width: 10px;
-  height: 10px;
-  background-color: transparent;
-  border-radius: 50%;
-}
-
-.task.done .check-icon {
-  background-color: #0B2027;
-}
-
-.content {
-  margin: 0;
-}
-
-.tarefa.feita .content {
+.tarefa input:checked + label {
   text-decoration: line-through;
 }
