added bg-colors to buttons

--- a/Task-List/css/style.css
+++ b/Task-List/css/style.css
@@ -133,3 +133,11 @@ body {
 .tarefa input[type="checkbox"]:checked + label {
   text-decoration: line-through;
 }
+
+.edit-task-btn{
+  background-color: #f71780;
+}
+
+.delete-task {
+  background-color: #46494C;
+}
