--- a/FlashCards/style/styles.css
+++ b/FlashCards/style/styles.css
@@ -57,7 +57,8 @@ header {
           align-items: center;
   background-color: #78b9f9;
   min-height: 10vh;
-  padding: 0 2.5rem;
+  padding: 0 1rem;
+  gap: 1rem;
 }
 
 header h1 {
@@ -65,15 +66,24 @@ header h1 {
   font-size: 2.5rem;
   font-family: 'Oswald', sans-serif;
   letter-spacing: .15rem;
+  margin-right: 1.5rem;
 }
 
 header nav #pai {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  gap: 1rem;
 }
 
 header nav #pai button {
   position: relative;
-  margin-right: 2rem;
   padding: .5rem 2rem;
   border-radius: 30px;
   border: none;
@@ -83,8 +93,7 @@ header nav #pai #info {
   display: none;
   position: absolute;
   top: calc(100% + 1.5rem);
-  right: 20%;
-  width: 20rem;
+  right: 15%;
   padding: 1rem 3rem;
   background-color: white;
 }
@@ -147,8 +156,8 @@ main #card-handler form {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background-color: #e2e6ff;
-  width: 30vw;
-  padding: 4rem 3rem;
+  width: 80%;
+  padding: 4rem 3.5rem;
   border-radius: 30px;
 }
 
@@ -161,7 +170,7 @@ main #card-handler form label {
 main #card-handler form input {
   width: 100%;
   height: 1.5rem;
-  margin: .5rem 0;
+  margin: .5rem 0 1.5rem;
   border: none;
 }
 
@@ -187,13 +196,15 @@ main #card-handler form #buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
 }
 
 main #card-handler form #buttons button {
-  padding: .5rem 1rem;
+  padding: .2rem 0;
   border: none;
   border-radius: 20px;
   color: white;
@@ -228,17 +239,6 @@ main #card-handler form #buttons button:last-child {
           justify-content: center;
 }
 
-#cards-grid .card .title {
-  padding: 1rem 0;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-#cards-grid .card img {
-  width: 100%;
-  padding: 0 1rem;
-}
-
 #cards-grid .card button {
   aspect-ratio: 1/1;
   width: 1rem;
@@ -249,6 +249,21 @@ main #card-handler form #buttons button:last-child {
   background-size: contain;
   border: none;
   background-image: url("https://cdn-icons-png.flaticon.com/512/1828/1828744.png");
+}
+
+#cards-grid .card img {
+  width: 100%;
+  padding: 0 1rem;
+}
+
+#cards-grid .card .title {
+  padding: 1rem 0;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+#cards-grid .card .description {
+  padding: 0 .5rem;
 }
 
 .active {
