--- a/FlashCards/style/styles.scss
+++ b/FlashCards/style/styles.scss
@@ -41,23 +41,30 @@ header {
     align-items: center;
     background-color: #78b9f9;
     min-height: 10vh;
-    padding: 0 2.5rem;
+    padding:0 1rem;
+    gap: 1rem;
 
     h1 {
         color: #f3f3f3;
         font-size: 2.5rem;
         font-family: 'Oswald', sans-serif;
         letter-spacing: .15rem;
+        margin-right: 1.5rem;
     }
 
     nav {
+        
         #pai {
             position: relative;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            gap: 1rem;
+
 
             button {
                 position: relative;
                 
-                margin-right: 2rem;
                 padding: .5rem 2rem;
                 border-radius: 30px;
                 border: none;
@@ -66,8 +73,8 @@ header {
                 display: none;
                 position: absolute;
                 top: calc(100% + 1.5rem);
-                right: 20%;
-                width: 20rem;
+                right: 15%;
+                
                 padding: 1rem 3rem;
                 background-color: white;
 
@@ -125,8 +132,8 @@ main {
             left: 50%;
             transform: translate(-50%, -50%);
             background-color: #e2e6ff;
-            width: 30vw;
-            padding: 4rem 3rem;
+            width: 80%;
+            padding: 4rem 3.5rem ;
             border-radius: 30px;
             label {
                 font-size: 1.2rem;
@@ -136,7 +143,7 @@ main {
             input {
                 width: 100%;
                 height: 1.5rem; 
-                margin: .5rem 0;
+                margin: .5rem 0 1.5rem;
                 border: none;
             }
             p {
@@ -155,11 +162,12 @@ main {
             }
             #buttons {
                 display: flex;
-                justify-content: space-between;
+                flex-direction: column;
+                gap: 0.5rem;
+                
 
                 button {
-                    padding: .5rem 1rem;
-                   
+                    padding: .2rem 0;
                     border: none;
                     border-radius: 20px;
                     color: white;
@@ -188,15 +196,6 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        .title {
-            padding: 1rem 0;
-            font-size: 1.5rem;
-            text-align: center;
-        }
-        img {
-            width: 100%;
-            padding:0 1rem ;
-        }
         button {
             aspect-ratio: 1/1;
             width: 1rem;
@@ -207,6 +206,21 @@ main {
             border: none;
             background-image: url('https://cdn-icons-png.flaticon.com/512/1828/1828744.png');
         }
+        img {
+            width: 100%;
+            padding:0 1rem ;
+        }
+        .title {
+            padding: 1rem 0;
+            font-size: 1.5rem;
+            text-align: center;
+        }
+        .description {
+            padding: 0 .5rem;
+        }
+        
+
+        
     }
 }
 
