--- a/FlashCards/style/styles.css
+++ b/FlashCards/style/styles.css
@@ -156,7 +156,7 @@ main #card-handler form {
           transform: translate(-50%, -50%);
   background-color: #e2e6ff;
   width: 80%;
-  padding: 3.5rem;
+  padding: 3rem;
   border-radius: 30px;
 }
 
@@ -199,11 +199,18 @@ main #card-handler form #buttons {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 0.5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: .8rem;
+  width: 100%;
 }
 
 main #card-handler form #buttons button {
-  padding: .2rem 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: .7rem;
   border: none;
   border-radius: 20px;
   color: white;
@@ -265,10 +272,6 @@ main #card-handler form #buttons button:last-child {
   padding: 1rem;
 }
 
-.active {
-  display: block !important;
-}
-
 @-webkit-keyframes fade-in {
   from {
     opacity: 0;
@@ -308,6 +311,16 @@ main #card-handler form #buttons button:last-child {
 @media (min-width: 768px) {
   form {
     width: 50% !important;
+  }
+  form #buttons {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 4rem !important;
   }
 }
 
