--- a/FlashCards/style/styles.scss
+++ b/FlashCards/style/styles.scss
@@ -133,7 +133,7 @@ main {
             transform: translate(-50%, -50%);
             background-color: #e2e6ff;
             width: 80%;
-            padding: 3.5rem ;
+            padding: 3rem ;
             border-radius: 30px;
             label {
                 font-size: 1.2rem;
@@ -163,11 +163,13 @@ main {
             #buttons {
                 display: flex;
                 flex-direction: column;
-                gap: 0.5rem;
-                
+                align-items: center;
+                gap: .8rem;
+                width: 100%;
 
                 button {
-                    padding: .2rem 0;
+                    width: max-content;
+                    padding: .7rem;
                     border: none;
                     border-radius: 20px;
                     color: white;
@@ -220,9 +222,6 @@ main {
     }
 }
 
-.active {
-    display: block !important;
-}
 
 @keyframes fade-in {
     from {
@@ -244,6 +243,13 @@ main {
 @media (min-width:768px) {
     form {
         width: 50% !important;
+
+        #buttons {
+            flex-direction: row !important;
+            justify-content: center;
+            gap: 4rem !important;
+            
+        }
     }
 }
 @media (min-width:1440px) {
