--- a/Calculator/style/styles.css
+++ b/Calculator/style/styles.css
@@ -1,8 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
 }
 
 body {
@@ -17,22 +22,74 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background-color: #2b2e31;
+  font-family: 'Roboto', sans-serif;
 }
 
-body .calculator .display #currentValue {
+body .calculator {
+  padding: .1rem;
+  -webkit-box-shadow: 0.2rem 0.2rem 0rem 0.2rem #00000059;
+          box-shadow: 0.2rem 0.2rem 0rem 0.2rem #00000059;
+}
+
+body .calculator .display {
+  min-height: 5rem;
+  border: 1px solid #a8a7cc99;
+  border-radius: 5px;
+  display: -ms-grid;
+  display: grid;
+}
+
+body .calculator .display p {
+  color: white;
+  font-size: 1.1rem;
+  padding: .3rem .3rem 0;
+}
+
+body .calculator .display input {
+  background-color: transparent;
+  border: none;
   width: 100%;
   text-align: right;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  padding: .3rem .6rem 0;
+  font-size: 2rem;
+}
+
+body .calculator .display input:focus-visible {
+  outline: none;
 }
 
 body .calculator .buttons {
+  margin-top: .5rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
+  gap: .3rem;
 }
 
 body .calculator .buttons button {
-  padding: clamp(0.5rem, 2vw, 2rem) clamp(1rem, 6vw, 7rem);
+  border: none;
+  padding: clamp(0.5rem, 2vw, 2rem) clamp(1rem, 5vw, 7rem);
+  background-color: #4f5458;
+  color: white;
+  font-size: 1.6rem;
+}
+
+body .calculator .buttons button:hover {
+  -webkit-filter: brightness(1.2);
+          filter: brightness(1.2);
+}
+
+body .calculator .buttons button:focus {
+  background-color: #56a0c9;
+  color: black;
+}
+
+body .calculator .buttons .operator, body .calculator .buttons #equals {
+  font-size: 2rem;
 }
 
 body .calculator .buttons #clear {
@@ -42,12 +99,13 @@ body .calculator .buttons #clear {
 }
 
 body .calculator .buttons #equals {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 3;
-  grid-column: 2/5;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3/5;
+  background-color: #4949b6;
 }
 
-.active {
-  background-color: blue;
+body .calculator .buttons #equals:focus {
+  background-color: #04a0b7;
 }
 /*# sourceMappingURL=styles.css.map */
