--- a/Calculator/style/styles.scss
+++ b/Calculator/style/styles.scss
@@ -1,45 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+button {
+    cursor: pointer;
+
+    
+}
 body {
     width: 100vw;
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #2b2e31;
+    font-family: 'Roboto', sans-serif;
 
     .calculator {
-        
+        padding: .1rem;
+        box-shadow: 0.2rem 0.2rem 0rem 0.2rem #00000059;
         .display {
-                  
-            #currentValue {
+            min-height: 5rem; 
+            border: 1px solid #a8a7cc99;
+            border-radius: 5px;
+            display: grid;
+            
+            p {
+                color: white;
+                font-size: 1.1rem; 
+                padding: .3rem .3rem 0;
+            }
+            input {
+                
+                background-color: transparent;
+                border: none;
                 width: 100%;
                 text-align: right;
+                font-family: 'Roboto', sans-serif;
+                color: white;
+                padding: .3rem .6rem 0;
+                font-size: 2rem; 
+                &:focus-visible {
+                    outline: none;
+                }
             } 
         }
     
         .buttons {
+            margin-top: .5rem;
             display: grid;
             grid-template-columns: repeat(4,1fr);
-    
+            gap: .3rem;
+
             button {
-                padding: clamp(.5rem, 2vw,2rem) clamp(1rem, 6vw,7rem)
+                border: none;
+                padding: clamp(.5rem, 2vw,2rem) clamp(1rem, 5vw,7rem);
+                background-color: #4f5458;
+                color: white;
+                font-size: 1.6rem;
+
+                &:hover {
+                    filter: brightness(1.2);
+                }
+                &:focus {
+                    background-color: #56a0c9;
+                    color: black;
+
+                    
+                }
+            }
+            .operator, #equals {
+                font-size: 2rem;
             }
             #clear {
                 grid-column: 1/3;
             }
     
             #equals {
-                grid-column: 2/5;
+                grid-column: 3/5;
+                background-color: #4949b6;
+
+                &:focus {
+                    background-color: #04a0b7;
+                }
             }
         }
     }
    
 }
 
-.active {
-    background-color: blue;
-}
