--- a/Task-List/css/styles.css
+++ b/Task-List/css/styles.css
@@ -25,10 +25,6 @@ body {
   background-repeat: no-repeat;
 }
 
-body header {
-  padding: 2rem;
-}
-
 body main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -41,7 +37,7 @@ body main {
       -ms-flex-align: center;
           align-items: center;
   gap: 2rem;
-  padding: 0 1rem;
+  padding: 3rem 1rem;
 }
 
 body main .main-card {
@@ -52,11 +48,16 @@ body main .main-card {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-color: var(--card-bg);
-  width: 100%;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  width: stretch;
+  max-width: 17rem;
   padding: 1rem;
   border-radius: 9px;
 }
@@ -71,6 +72,10 @@ body main .main-card .card-header {
           align-items: center;
 }
 
+body main .main-card .card-header h1 {
+  font-size: 1.5rem;
+}
+
 body main .main-card .card-header #show-input {
   width: 2rem;
   height: 2rem;
@@ -82,9 +87,7 @@ body main .main-card .card-header #show-input {
 }
 
 body main .main-card form {
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
+  padding: 0.5rem;
   display: none;
   gap: 1rem;
   -webkit-box-orient: vertical;
@@ -109,29 +112,32 @@ body main .main-card form[aria-expanded="false"][data-transition="true"] {
   display: flex;
 }
 
-body main .main-card form fieldset {
-  padding: 0.5rem;
-  border: .2rem solid #f0f0f4;
+body main .main-card form div p {
+  -webkit-transform: translateY(1.27rem) translateX(0.5rem);
+          transform: translateY(1.27rem) translateX(0.5rem);
 }
 
-body main .main-card form fieldset:first-of-type legend {
-  -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-          transform: translateY(1.7rem) translateX(0.5rem);
-}
-
-body main .main-card form fieldset:first-of-type legend[aria-expanded="true"] {
+body main .main-card form div p[aria-expanded="true"] {
   -webkit-animation: goUp 400ms forwards;
           animation: goUp 400ms forwards;
 }
 
-body main .main-card form fieldset:first-of-type legend[aria-expanded="false"][data-transition="true"] {
+body main .main-card form div p[aria-expanded="false"][data-transition="true"] {
   -webkit-animation: goDown 400ms forwards;
           animation: goDown 400ms forwards;
 }
 
-body main .main-card form fieldset input {
+body main .main-card form div, body main .main-card form fieldset {
+  border: none;
+}
+
+body main .main-card form div input, body main .main-card form fieldset input {
   width: 100%;
   height: 1.3rem;
+}
+
+body main .main-card form .form-botao {
+  width: 35%;
 }
 
 body main ul {
@@ -152,12 +158,11 @@ body main ul {
 body main ul li {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 3fr 7fr;
-      grid-template-columns: 1fr 3fr 7fr;
-  width: 100%;
-  padding: 1rem 0.5rem .5rem;
+  -ms-grid-columns: 1.5rem 3.5rem calc(100% - 5rem);
+      grid-template-columns: 1.5rem 3.5rem calc(100% - 5rem);
+  padding: .5rem;
   justify-items: center;
-  gap: .7rem;
+  position: relative;
   border-radius: 10px;
   border: 2px solid #e0dddd;
   -webkit-box-shadow: 0.1rem 0.1rem 0 0 #979696;
@@ -196,6 +201,9 @@ body main ul li label, body main ul li input[type=text] {
   -ms-grid-row-span: 2;
   grid-row: 1/3;
   word-break: keep-all;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  margin-left: .5rem;
 }
 
 body main ul li input[type=checkbox] {
@@ -205,7 +213,8 @@ body main ul li input[type=checkbox] {
 }
 
 body main ul li label {
-  width: 70%;
+  width: 100%;
+  padding: 0 .5rem;
   display: block;
   position: relative;
   cursor: pointer;
@@ -216,8 +225,8 @@ body main ul li label::before {
   position: absolute;
   width: 1rem;
   height: 1rem;
-  left: -3.7rem;
-  top: -0.1rem;
+  left: -1.8rem;
+  top: 0;
   border-radius: 4px;
   border: 1px solid gray;
 }
@@ -227,8 +236,8 @@ body main ul li label::after {
   position: absolute;
   width: .7rem;
   height: .7rem;
-  left: -3.5rem;
-  top: 0.1rem;
+  left: -1.55rem;
+  top: 0.2rem;
   background-image: url("https://cdn-icons-png.flaticon.com/512/594/594586.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -247,9 +256,13 @@ body main ul li label[aria-expanded="false"][data-transition="true"]::after {
 }
 
 body main ul li #date-div {
+  -ms-grid-column-align: end;
+      justify-self: end;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -ms-grid-row: 3;
+  grid-row: 3;
 }
 
 body main ul li .date-task {
@@ -258,12 +271,44 @@ body main ul li .date-task {
 }
 
 body main ul li .confirm {
+  position: absolute;
+  bottom: .2rem;
+  left: .3rem;
   -ms-grid-row: 3;
   grid-row: 3;
-  z-index: 10;
   grid-column: 2/-1;
-  padding: .5rem 1rem 0;
-  background-color: antiquewhite;
+  padding: .3rem .6rem;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  border-top: 1px solid #817d7d;
+  border-left: 1px solid #817d7d;
+  -webkit-box-shadow: 0.1rem 0.1rem 0 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0.1rem 0.1rem 0 0 rgba(0, 0, 0, 0.5);
+}
+
+body main ul li .confirm p {
+  font-size: .75rem;
+  text-align: center;
+  font-family: 'Hind Siliguri', sans-serif;
+}
+
+body main ul li .confirm button {
+  font-size: .65rem;
+  border-radius: 5px;
+  padding: .1rem .2rem;
+  margin: 0 .3rem;
+}
+
+body main ul li .confirm button:first-of-type {
+  background-color: #e63737;
+  color: white;
+}
+
+body main ul li .confirm button:last-of-type {
+  background-color: white;
+  color: black;
 }
 
 body main ul li[aria-expanded="true"] > label::after {
@@ -278,7 +323,10 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
 
 .bg-btn {
   aspect-ratio: 1/1;
-  width: 100%;
+  width: 80%;
+  margin: .3rem 0;
+  position: relative;
+  top: .4rem;
   background-color: transparent;
   border: none;
   background-repeat: no-repeat;
@@ -302,18 +350,9 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
           transform: scale(1);
 }
 
-@media (min-width: 425px) {
-  .bg-btn {
-    width: 80% !important;
-  }
-}
-
 @media (min-width: 600px) {
   main {
-    padding: 0 6rem !important;
-  }
-  .bg-btn {
-    width: 40% !important;
+    padding: 3rem 6rem !important;
   }
 }
 
@@ -323,9 +362,6 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
         grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
   }
-  .bg-btn {
-    width: 80% !important;
-  }
 }
 
 @media (min-width: 1300px) {
@@ -333,9 +369,6 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
     -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
-  }
-  .bg-btn {
-    width: 70% !important;
   }
 }
 
@@ -437,45 +470,45 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
 
 @-webkit-keyframes goUp {
   from {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.27rem) translateX(0.5rem);
+            transform: translateY(1.27rem) translateX(0.5rem);
   }
   to {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(-0.3rem) translateX(0);
+            transform: translateY(-0.3rem) translateX(0);
   }
 }
 
 @keyframes goUp {
   from {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.27rem) translateX(0.5rem);
+            transform: translateY(1.27rem) translateX(0.5rem);
   }
   to {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(-0.3rem) translateX(0);
+            transform: translateY(-0.3rem) translateX(0);
   }
 }
 
 @-webkit-keyframes goDown {
   from {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(-0.3rem) translateX(0);
+            transform: translateY(-0.3rem) translateX(0);
   }
   to {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.27rem) translateX(0.5rem);
+            transform: translateY(1.27rem) translateX(0.5rem);
   }
 }
 
 @keyframes goDown {
   from {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(-0.3rem) translateX(0);
+            transform: translateY(-0.3rem) translateX(0);
   }
   to {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.27rem) translateX(0.5rem);
+            transform: translateY(1.27rem) translateX(0.5rem);
   }
 }
 /*# sourceMappingURL=styles.css.map */
