--- a/Task-List/css/styles.css
+++ b/Task-List/css/styles.css
@@ -4,7 +4,10 @@
   --body-grad1:rgba(90,113,233,1);
   --body-grad2:rgba(241,116,141,1);
   --card-bg:rgb(255, 255, 255);
-  --plus-btn:rgb(246 95 125);
+  --form-btn-bg: rgb(192, 250, 250);
+  --plus-bt: rgb(255, 255, 255);
+  --conf-bt-bg: #e63737;
+  --canc-bt-bg: white;
 }
 
 * {
@@ -84,9 +87,9 @@ body main .main-card .card-header #show-input {
   height: 2rem;
   border: none;
   border-radius: 20px;
-  color: white;
+  color: var(--plus-bt);
   font-size: 1.2rem;
-  background-color: var(--plus-btn);
+  background-color: var(--body-grad2);
 }
 
 body main .main-card form {
@@ -97,6 +100,7 @@ body main .main-card form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 90%;
 }
 
 body main .main-card form[aria-expanded="true"] {
@@ -115,19 +119,26 @@ body main .main-card form[aria-expanded="false"][data-transition="true"] {
   display: flex;
 }
 
-body main .main-card form div p {
-  -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-          transform: translateY(1.7rem) translateX(0.5rem);
+body main .main-card form div p:first-of-type {
+  -webkit-transform: translateY(1.6rem) translateX(0.5rem);
+          transform: translateY(1.6rem) translateX(0.5rem);
 }
 
-body main .main-card form div p[aria-expanded="true"] {
+body main .main-card form div p:first-of-type[aria-expanded="true"] {
   -webkit-animation: goUp 400ms forwards;
           animation: goUp 400ms forwards;
 }
 
-body main .main-card form div p[aria-expanded="false"][data-transition="true"] {
+body main .main-card form div p:first-of-type[aria-expanded="false"][data-transition="true"] {
   -webkit-animation: goDown 400ms forwards;
           animation: goDown 400ms forwards;
+}
+
+body main .main-card form div .error-msg {
+  font-size: .6rem;
+  font-weight: 700;
+  padding: .3rem 0;
+  color: var(--conf-bt-bg);
 }
 
 body main .main-card form div, body main .main-card form fieldset {
@@ -142,7 +153,7 @@ body main .main-card form div input, body main .main-card form fieldset input {
 body main .main-card form .form-botao {
   width: 35%;
   padding: .3rem;
-  background-color: #c0fafa;
+  background-color: var(--form-btn-bg);
   border-radius: 9px;
   border: none;
   -webkit-box-shadow: .1rem .1rem 0 0;
@@ -172,7 +183,7 @@ body main ul {
   width: 100%;
   overflow: hidden;
   overflow-y: scroll;
-  background-color: white;
+  background-color: var(--plus-bt);
   list-style-type: none;
 }
 
@@ -277,6 +288,19 @@ body main ul li label[aria-expanded="false"][data-transition="true"]::after {
           animation: goDown 400ms forwards;
 }
 
+body main ul li .task-error {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  justify-self: flex-start;
+  font-size: .8rem;
+  font-weight: 700;
+  padding: .7rem;
+  color: var(--conf-bt-bg);
+}
+
 body main ul li #date-div {
   -ms-grid-column-align: end;
       justify-self: end;
@@ -296,19 +320,16 @@ body main ul li .confirm {
   position: absolute;
   bottom: .2rem;
   left: 1rem;
+  -ms-grid-column-align: start;
+      justify-self: start;
   -ms-grid-row: 3;
   grid-row: 3;
   grid-column: 2/-1;
   padding: .3rem .6rem;
-  -ms-grid-column-align: start;
-      justify-self: start;
-  background-color: #adcdfb;
   font-weight: 700;
   border-radius: 10px;
-  border-top: 1px solid #817d7d;
-  border-left: 1px solid #817d7d;
-  -webkit-box-shadow: 0.1rem 0.1rem 0 0 rgba(0, 0, 0, 0.5);
-          box-shadow: 0.1rem 0.1rem 0 0 rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 0.2rem 0.05rem rgba(0, 0, 0, 0.582);
+          box-shadow: 0 0 0.2rem 0.05rem rgba(0, 0, 0, 0.582);
 }
 
 body main ul li .confirm p {
@@ -326,13 +347,23 @@ body main ul li .confirm button {
 }
 
 body main ul li .confirm button:first-of-type {
-  background-color: #e63737;
+  background-color: var(--conf-bt-bg);
   color: white;
 }
 
 body main ul li .confirm button:last-of-type {
-  background-color: white;
+  background-color: var(--canc-bt-bg);
   color: black;
+}
+
+body main ul li .confirm[aria-expanded="true"] {
+  -webkit-animation: check 400ms forwards;
+          animation: check 400ms forwards;
+}
+
+body main ul li .confirm[aria-expanded="false"][data-transition="true"] {
+  -webkit-animation: uncheck 400ms forwards;
+          animation: uncheck 400ms forwards;
 }
 
 body main ul li[aria-expanded="true"] > label::after {
@@ -494,8 +525,8 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
 
 @-webkit-keyframes goUp {
   from {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.6rem) translateX(0.5rem);
+            transform: translateY(1.6rem) translateX(0.5rem);
   }
   to {
     -webkit-transform: translateY(-0.3rem) translateX(0);
@@ -505,8 +536,8 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
 
 @keyframes goUp {
   from {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.6rem) translateX(0.5rem);
+            transform: translateY(1.6rem) translateX(0.5rem);
   }
   to {
     -webkit-transform: translateY(-0.3rem) translateX(0);
@@ -520,8 +551,8 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
             transform: translateY(-0.3rem) translateX(0);
   }
   to {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.6rem) translateX(0.5rem);
+            transform: translateY(1.6rem) translateX(0.5rem);
   }
 }
 
@@ -531,8 +562,8 @@ body main ul li[aria-expanded="false"][data-transition="true"] > label::after {
             transform: translateY(-0.3rem) translateX(0);
   }
   to {
-    -webkit-transform: translateY(1.7rem) translateX(0.5rem);
-            transform: translateY(1.7rem) translateX(0.5rem);
+    -webkit-transform: translateY(1.6rem) translateX(0.5rem);
+            transform: translateY(1.6rem) translateX(0.5rem);
   }
 }
 /*# sourceMappingURL=styles.css.map */
