--- a/Task-List/css/styles.scss
+++ b/Task-List/css/styles.scss
@@ -4,7 +4,10 @@
   --body-grad1:rgba(90,113,233,1);
   --body-grad2:rgba(241,116,141,1);
   --card-bg:rgb(255, 255, 255);
-  --plus-btn:rgb(246 95 125);
+  --form-btn-bg: rgb(192, 250, 250);
+  --plus-bt: rgb(255, 255, 255);
+  --conf-bt-bg: #e63737;
+  --canc-bt-bg: white;
 }
 * {
   margin: 0;
@@ -54,16 +57,17 @@ body {
             height: 2rem;
             border: none;
             border-radius: 20px;
-            color: white;
+            color: var(--plus-bt);
             font-size: 1.2rem;
-            background-color: var(--plus-btn); 
+            background-color: var(--body-grad2); 
           }
         }
         form {
           padding: 0.5rem;
           display: none;
           gap: 1rem;
-          flex-direction: column;        
+          flex-direction: column;  
+          width: 90%;      
 
           &[aria-expanded="true"] {
             animation: slidein 300ms forwards;
@@ -74,8 +78,8 @@ body {
             display: flex;
           }
           div {           
-              p {                
-                transform: translateY(1.7rem)
+              p:first-of-type {                
+                transform: translateY(1.6rem)
                   translateX(.5rem);
 
                 &[aria-expanded="true"] {
@@ -84,6 +88,12 @@ body {
                 &[aria-expanded="false"][data-transition="true"] {
                   animation: goDown 400ms forwards;
                 }
+              }
+              .error-msg {
+                font-size: .6rem;
+                font-weight: 700;
+                padding: .3rem 0;
+                color: var(--conf-bt-bg);
               }
           }
           div,fieldset {           
@@ -96,7 +106,7 @@ body {
           .form-botao {
             width: 35%;  
             padding: .3rem;
-            background-color: #c0fafa;
+            background-color: var(--form-btn-bg);
             border-radius: 9px;
             border: none;
             box-shadow: .1rem .1rem 0 0;
@@ -121,7 +131,7 @@ body {
           width: 100%;
           overflow: hidden;
           overflow-y: scroll;    
-          background-color: white;
+          background-color: var(--plus-bt);
           list-style-type: none;
 
           li {
@@ -146,6 +156,7 @@ body {
               grid-row: 3/4;
               grid-column: 1/2;
               background-image: url('https://cdn-icons-png.flaticon.com/512/1345/1345823.png');
+
             }
 
             label,input[type=text] {
@@ -198,7 +209,15 @@ body {
                 animation: goDown 400ms forwards;
               }
             }
-            
+            .task-error {
+              grid-column: 2/4;
+              grid-row: 2;
+              justify-self: flex-start;
+              font-size: .8rem;
+              font-weight: 700;
+              padding: .7rem ;
+              color: var(--conf-bt-bg);
+            }
             #date-div {
               justify-self: end;
               grid-column: 3/4;
@@ -213,18 +232,13 @@ body {
               position: absolute;    
               bottom: .2rem;         
               left: 1rem;
+              justify-self: start; 
               grid-row: 3;              
               grid-column: 2/-1;
-              padding: .3rem .6rem;
-              justify-self: start;
-
-              background-color: #adcdfb;
+              padding: .3rem .6rem;               
               font-weight: 700;
-
-              border-radius: 10px;
-              border-top: 1px solid rgb(129, 125, 125);
-              border-left: 1px solid rgb(129, 125, 125);
-              box-shadow: .1rem .1rem 0 0 rgba(0, 0, 0, 0.5);
+              border-radius: 10px;             
+              box-shadow: 0 0 0.2rem 0.05rem rgba(0, 0, 0, 0.582);
 
               p {
                 font-size: .8rem;
@@ -238,15 +252,21 @@ body {
                 padding: .1rem .2rem;
                 margin: 0 .3rem;
                 font-weight: 700;
+
                 &:first-of-type {
-                  background-color: #e63737;                  
+                  background-color: var(--conf-bt-bg);                  
                   color: white;
                 }
-                &:last-of-type {
-                  
-                  background-color: white;
+                &:last-of-type {                 
+                  background-color: var(--canc-bt-bg);
                   color: black;
                 }
+              }
+              &[aria-expanded = "true"]{
+                animation: check 400ms forwards;
+              }
+              &[aria-expanded = "false"][data-transition = "true"]{
+                animation: uncheck 400ms forwards;
               }
             }
 
@@ -365,7 +385,7 @@ body {
 
 @keyframes goUp {
   from {
-    transform: translateY(1.7rem)
+    transform: translateY(1.6rem)
     translateX(.5rem);
   }
   to {
@@ -380,7 +400,7 @@ body {
     translateX(0);
   }
   to {
-    transform: translateY(1.7rem)
+    transform: translateY(1.6rem)
     translateX(.5rem);
   }
 }
