--- a/Task-List/css/styles.scss
+++ b/Task-List/css/styles.scss
@@ -77,11 +77,13 @@ body {
             animation: slideout 300ms forwards;
             display: flex;
           }
-          div {           
-              p:first-of-type {                
-                transform: translateY(1.6rem)
-                  translateX(.5rem);
+          div { 
+            .description {
+              display: flex;
+              justify-content: space-between;
 
+              p {                
+                transform: translateY(1.6rem) translateX(.5rem);
                 &[aria-expanded="true"] {
                   animation: goUp 400ms forwards;
                 }
@@ -89,6 +91,10 @@ body {
                   animation: goDown 400ms forwards;
                 }
               }
+              button {
+                padding: 0 0.2rem;
+              }
+            }                       
               .error-msg {
                 font-size: .6rem;
                 font-weight: 700;
@@ -235,9 +241,10 @@ body {
               justify-self: start; 
               grid-row: 3;              
               grid-column: 2/-1;
-              padding: .3rem .6rem;               
+              padding: .3rem;               
               font-weight: 700;
-              border-radius: 10px;             
+              border-radius: 10px;   
+              background-color: var(--canc-bt-bg);          
               box-shadow: 0 0 0.2rem 0.05rem rgba(0, 0, 0, 0.582);
 
               p {
@@ -275,8 +282,7 @@ body {
             }
             &[aria-expanded = "false"][data-transition = "true"] > label::after {
               animation: check 400ms forwards ;
-            }
-            
+            }     
           }
         }    
   }
@@ -302,11 +308,10 @@ body {
   opacity: 0.4;
 
   label {
-    text-decoration: line-through;
-
+    text-decoration: line-through; 
     &::after {
       transform: scale(1);
-    }
+    } 
   }
 }
 
@@ -389,14 +394,14 @@ body {
     translateX(.5rem);
   }
   to {
-    transform: translateY(-.3rem)
+    transform: translateY(0rem)
     translateX(0);
   }
 }
 
 @keyframes goDown {
   from {
-    transform: translateY(-.3rem)
+    transform: translateY(0rem)
     translateX(0);
   }
   to {
