--- a/Task-List/css/styles.css
+++ b/Task-List/css/styles.css
@@ -148,7 +148,7 @@ body main .main-card form div .description button {
 }
 
 body main .main-card form div .error-msg {
-  font-size: .6rem;
+  font-size: .8rem;
   font-weight: 700;
   padding: .3rem 0;
   color: var(--conf-bt-bg);
@@ -196,7 +196,7 @@ body main ul {
   width: 100%;
   overflow: hidden;
   overflow-y: scroll;
-  background-color: var(--plus-bt);
+  background-color: transparent;
   list-style-type: none;
 }
 
@@ -212,6 +212,7 @@ body main ul li {
   border: 2px solid #e0dddd;
   -webkit-box-shadow: 0.1rem 0.1rem 0 0 #979696;
           box-shadow: 0.1rem 0.1rem 0 0 #979696;
+  background-color: white;
 }
 
 body main ul li .task-checker {
