--- a/Task-List/Using-API/styles/styles.scss
+++ b/Task-List/Using-API/styles/styles.scss
@@ -1,15 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Hind+Siliguri:wght@300&family=Scheherazade+New&display=swap');
+:root {
+    --body-bg: rgb(90,113,233);
+    --body-grad1:rgba(90,113,233,1);
+    --body-grad2:rgba(241,116,141,1);
+    --card-bg:rgb(255, 255, 255);
+    --form-btn-bg: rgb(192, 250, 250);
+    --plus-bt: rgb(255, 255, 255);
+}
+body {
+    min-height: 100vh;
+    padding: 1rem;
+    background: var(--body-bg);
+    background: linear-gradient(195deg, var(--body-grad1) 50%, var(--body-grad2) 50%);
+    background-repeat: no-repeat;
+    font-family: 'Poppins', sans-serif;
+}
+
+header {
+    h1 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: white;
+    }
+}
 main {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: .5rem;
 
+    button {
+        cursor: pointer;
+        padding: .5rem 1rem;
+        border-radius: 10px;
+        width: 40%;
+        border: none;
+        font-size: 1.2rem;
+        background-color: white;
+        box-shadow: 0.2rem .2rem 0 0 rgba(0, 0, 0, 0.13);
+        
+        &:hover {
+            background-color: rgb(181, 255, 255);
+        }
+    }
     .task-card {
-        padding: 1rem;
-        background-color: aqua;  
-        border-radius: 15px;  
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: .5rem;       
+        border-radius: 10px;
+        box-shadow: .1rem .1rem 0 0 rgba(151, 150, 150, 0.692);
+        background-color: white; 
 
         .task-title {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
         }
     }
 }
@@ -19,5 +63,9 @@ main {
     display: none;
 }
 .done {
-    text-decoration: line-through;
+    opacity: 0.4;
+    h2 {
+
+        text-decoration: line-through;
+    }
 }
